# rail-hourly-departures

./: .gitignore  Cargo.toml  README.md  run.sh
config/: atco_station_mappings.toml  gb_station_three_alpha_codes.json
src/: criteria.rs  hour_grouping.rs  main.rs  public_transport_mode.rs  records.rs  stops.rs  utils.rs
