[package]
name = "rail-hourly-departures"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
connectivity = { git = "https://github.com/Department-for-Transport-External/connectivity-lib" }
fs-err = "2.11.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.8.1"
serde = "1.0.152"
serde_json = "1.0"
toml = "0.8.20"